Fixed width and height of some visualizations on Firefox 57

--- a/public/less/kbn.less
+++ b/public/less/kbn.less
@@ -77,7 +77,7 @@ kbn-vis, visualize, visualization {
 
 /* Adjusting the height of the visualization when its type is metric */
 .metric .vis-container {
-  margin-top: -59px;
+  margin-top: -54px;
 }
 
 /* This changes the background and display in the kbn-vis-value in the lens */
