--- a/public/less/overview.less
+++ b/public/less/overview.less
@@ -36,7 +36,7 @@
 .overview-oscap-score-row,
 .overview-oscap-top-row-div,
 .overview-audit-metric-row {
-    height: 100px;
+    height: 105px;
 }
 
 .overview-audit-after-metric-row {
@@ -74,7 +74,7 @@
 }
 
 .overview-fim-metrics-div{
-    height: 300px;
+    height: 307px;
 }
 
 .overview-audit-alerts-over-time {
